Shuffling is always done 20 times